' 投稿やルームの削除は不可
' スレッドと未読範囲の表示を追加する
' ユーザーによるルームの追加と名前の変更
' => ルームの無限増殖を防ぐためにユーザーあたり追加できるルーム数に上限(5)を設ける
'    ルーム上限に達したときに使いまわせるように名前の変更機能を入れる (履歴は取らない)
'ユーザー名、ルーム名は20文字以内 (スマホの1行当たりの文字列が19～21のため)
'投稿の文字数は200 (20 x 10)上限
'スレッドの未読管理は時間が余れば実装する (スレッドの未読管理忘れてました)

@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  String Id
  String Name varchar(20)
  int createdRoomCount
  DateTime createDate
  DateTime updateDate
  --
  List<Post> Posts
  List<userInfoInRoom> userInfoInRooms
}

entity "Post" as post {
  Guid Id
  String UserId
  Guid RoomId
  string Text　varchar(200)
  DateTime createDate
  DateTime updateDate
  --
  List<Thread> Threads
}

entity "Thread" as thread {
  Guid Id
  Guid PostId
  string UserId
  string Text varchar(200)
  DateTime createDate
  DateTime updateDate
}

entity "Room" as room {
  Guid Id
  string Name varchar(20)
  DateTime createDate
  DateTime updateDate
  --
  List<Post> Posts
  List<userInfoInRoom> userInfoInRooms
}

entity "UserInfoInRoom" as userInfoInRoom {
  Guid Id
  Guid RoomId
  String UserId
  DateTime LatestAccessDate
}

user ||..o{ post
user ||..o{ userInfoInRoom
room ||..o{ userInfoInRoom
room ||..o{ post
post ||..o| thread
'  |o..o{ e03

@enduml